# mpw-modeling-hamster

./: .gitignore  .project  README.md  pom.xml
.github/workflows/: github-actions-release.yaml  github-actions.yaml  workflow-build.yaml
bundle/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/: .classpath  .gitignore  pom.xml
bundle/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/model/: Hamster.aird  Hamster.genmodel
bundle/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/src-workflow/workflow/: hamstersimulator_genmodel.mwe2  hamstersimulator_workflow.mwe2
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/: .classpath  .gitignore  .project  plugin.properties  pom.xml
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/model/: Hamster.aird  Hamster.ecore  Hamster.genmodel
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/src-commands/: NOTE.md
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/src-commands/editor/: addGrainsToTile.henshin  addWallToTile.henshin  clearTile.henshin  initDefaultHamster.henshin  initTerritory.henshin  initTerritory.henshin_diagram
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/src-commands/game/: initHamster.henshin  move.henshin  pickBreadcrumb.henshin  pickBreadcrumb.henshin_diagram  pickGrain.henshin  putBreadcrumb.henshin  putBreadcrumb.henshin_diagram  putGrain.henshin  turnLeft.henshin
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/src-queries/conditions/editorterritory/: addWallToTileConstraints.query
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/src-queries/conditions/gamehamster/: initHamsterConstraints.query  pickBreadcrumbConstraints.query  putBreadcrumbConstraints.query
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/src-queries/invariants/hamster/: hamsterInitializedInvariant.query
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/src-queries/queries/hamster/: breadcrumbAvailable.query
bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/src-workflow/workflow/: hamstersimulator_genmodel.mwe2  hamstersimulator_workflow.mwe2
core/: CMakeLists.txt
core/src/impl/: CMakeLists.txt  HamsterColors.h  HamsterGameViewPresenter.cpp  HamsterGameViewPresenter.h  HamsterView.h
core/test/: UndoCommandTest.cpp
core/test/util/: GameStringifier.cpp
core/test/view/: HamsterViewModelTest.cpp  HamsterViewTestBase.h
examples/: Example01.cpp  Example02.cpp  Example03.cpp
main/: SimpleHamsterGame.cpp  SimpleHamsterGame.h
releng/: installed-items.p2f  release-checklist.md  update-versions.kts
releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent/: .project  pom.xml
releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.targetplatform/: .project  pom.xml  targetplatform.target
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/: .gitignore  CMakeLists.txt  CMakeListsLocalProperties.cmake
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/: CMakeLists.txt
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/resources/territories/: example03.ter
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/src/impl/: CMakeLists.txt  HamsterColors.cpp  HamsterColors.h  HamsterCore.h  HamsterGameViewPresenter.cpp  HamsterGameViewPresenter.h  TerritoryLoader.cpp
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/test/: CMakeLists.txt  HamsterCommandTest.cpp  InitHamsterCommandTest.cpp  TerritoryBuilderTest.cpp  UndoCommandTest.cpp
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/test/util/: GameStringifier.cpp  GameStringifier.h  TestUtils.cpp  TestUtils.h
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/core/test/view/: HamsterViewModelStringifier.cpp  HamsterViewModelStringifier.h  HamsterViewModelTest.cpp  HamsterViewTestBase.cpp  HamsterViewTestBase.h  UserInputInterfaceFake.h  ViewModelStringifier.cpp  ViewModelStringifier.h
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/examples/: CMakeLists.txt  Example01.cpp  Example03.cpp
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/main/: CMakeLists.txt  SimpleHamsterGame.cpp  SimpleHamsterGame.h
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui/: CMakeLists.txt  HamsterApplicationHandler.cpp  HamsterApplicationHandler.h  IncludeNanogui.cmake  README.md  SdlApplication.cpp  SdlApplication.h  SdlApplicationListener.h  SdlGameInputInterface.cpp  SdlGameInputInterface.h  SimpleHamsterGame.cpp  SimpleHamsterGame.h  main.cpp
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui/examples/: Example01.cpp  Example02.cpp
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.cpp/ui/util/: ColorConverter.h  ControlWindowTheme.h  GameLogControl.cpp  GameLogControl.h  InputDialogWindow.cpp  InputDialogWindow.h  LightTheme.h  ListTheme.h  SpeedSliderControl.cpp  SpeedSliderControl.h  WidgetBackgroundWrapper.cpp
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/core/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/core/src/main/java/: module-info.java
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/examples/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/main/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/parent/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/ui/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/ui/src/main/java/: module-info.java
tutorial/: Tutorial.md
ui/: HamsterApplicationHandler.cpp  HamsterApplicationHandler.h  SdlApplication.h  SdlGameInputInterface.cpp  SdlGameInputInterface.h
ui/util/: GameLogControl.cpp  InputDialogWindow.cpp  InputDialogWindow.h  UiDimensions.h  WidgetBackgroundWrapper.cpp  WidgetBackgroundWrapper.h
(+35 files in other folders)
